Now displaying a spinner instead of a download button when pdf is being generated.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,4 +41,5 @@
   </section>
 </div>
 
-<button (click)="download(container)">Download</button>
+<button *ngIf="!this.loading" (click)="download(container)">Download</button>
+<button *ngIf="this.loading"><div class="loader"></div></button>
