--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,8 @@
     <img src="../../assets/pic.jpg">
     <article class="contact">
         <h1>Philippe Hamelin</h1>
-        <h2>Front End Developer</h2>
-        <span><fa-icon [icon]="faMail"></fa-icon><p>hamelinphilippe1@gmail.com</p></span>
+        <h4>Front End Developer</h4>
+        <span><fa-icon [icon]="faMail"></fa-icon><p>hamelinphilippe1&#64;gmail.com</p></span>
         <span><fa-icon [icon]="faMobile"></fa-icon><p>06 75 91 82 **</p></span>
     </article>
     <aside class="social">
