--- a/src/app/work-experience/work-experience.component.html
+++ b/src/app/work-experience/work-experience.component.html
@@ -5,9 +5,14 @@
     </header>
     <article class="content">
         <p class="role_description">{{description}}</p>
-        <h3 *ngIf="lang === 'ENG'" class="achievements">Achievements: </h3>
-        <h3 *ngIf="lang === 'FR'" class="achievements">Challenge: </h3>
-        <p class="achievements">{{achievements}}</p>
+        @if (achievements) {
+            @if (lang === 'ENG') {
+                <h3 class="achievements">Achievements: </h3>
+            } @else {
+                <h3 class="achievements">Challenge: </h3>
+            }
+            <p class="achievements">{{achievements}}</p>
+        }
         <h3 *ngIf="lang === 'ENG'" >Technologies used: </h3>
         <h3 *ngIf="lang === 'FR'" >Technologies utilisées: </h3>
         <div class="tech"><p class="el" *ngFor="let el of tech">{{el | titlecase}}</p></div>
