--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,12 +9,13 @@
     h1 {
         text-transform: uppercase;
         width: 100%;
+        padding-bottom: 0.2em;
         &::before {
             content:" ";
             position: absolute;
             border-bottom: 1px solid black;
-            width: 90%;
-            height: 1.2em;
+            width: 100%;
+            height: 1.5em;
         }
     }
     .summary, .content {
@@ -25,19 +26,18 @@
     .content {
         display: grid;
         grid-template-columns: 75% 25%;
-        margin: 0;
-        margin-left: 1em;
-        margin-bottom: 1em;
-        .experience {
-            position: relative;
-            overflow: hidden;
+        margin: 1em;
+        .aside, .experience {
+          margin-right: 1em;
+          padding: 0.5em;
+          position: relative;
+          overflow: hidden;
         }
         .aside {
             display: flex;
             flex-direction: column;
             background-color: #003366;
             border-radius: 1em;
-            padding: 0.5em;
             color: white;
         }
     }
@@ -84,26 +84,31 @@ button {
 }
 
 @media screen and (max-width: 576px) {
-  .lang {
-    font-size: 10px;
-    p {
-      margin-right: 5px;
+  .container {
+    .lang {
+      font-size: 10px;
+      p {
+        margin-right: 5px;
+      }
     }
+      .content {
+          grid-gap: 1em!important;
+          grid-template-columns: 50% 50%;
+          margin: 0;
+          .aside, .experience {
+            padding: 0.2em 1em 0 0.5em;
+            margin-right: 1.2em;
+          }
+      }
+      .summary {
+          p {
+              font-size: 12px;
+          }
+      }
   }
-    .content {
-        grid-gap: 1em!important;
-    }
-    .content, .summary {
-        margin: 0.2em!important;
-    }
-    .summary {
-        p {
-            font-size: 12px;
-        }
-    }
-    button {
-        font-size: 18px;
-    }
+  button {
+      font-size: 18px;
+  }
 }
 
 
