--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -55,7 +55,17 @@
     }
 }
 @media screen and (max-width: 576px) {
-    span {
-        font-size: 12px!important;
+    .container {
+        padding: 0;
+        border-radius: 0;
+        justify-content: flex-start;
+        span {
+            font-size: 12px!important;
+        }
+        .social {
+            flex-direction: column;
+            grid-gap: 0;
+            margin-right: 0;
+        }
     }
 }
