--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,3 +1,16 @@
+span {
+    p {
+        margin: 0.5em 0 0 0;
+    }
+    .progress_border {
+        border-radius: 1px solid black;
+        .progress {
+            background-color: var(--accent);
+            height: 16px;
+            border-radius: 1em;
+        }
+    }
+}
 @media screen and (max-width: 576px) {
     p {
         font-size: 12px;
