--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-    margin: 0;
+    margin: 2em;
     font-family: 'Titillium Web';
     font-style: normal;
     font-weight: 400;
@@ -46,22 +46,19 @@ h5 {
     
     h1 {
         font-size: 17px;
-        margin-bottom: 1em;
     }
     h2 {
-        font-size: 14px;
+        font-size: 15px;
     }
     h3 {
-        font-size: 12px;
+        font-size: 13px;
         margin-bottom: 0.5em;
     }
     h4 {
-        font-size: 10px;
+        font-size: 12px;
     }
     h5 {
         font-size: 8px;
         color: rgba(0, 0, 0, 0.5);
     }
 }
-/* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
